@@ -225,3 +225,8 @@ th.assetsFilelistHeaderFilenames {
 		}
 	}
 }
+
+.fElement .directUploadBox {
+	margin-top: 10px;
+	font-size: 14px;
+}
